# src/core/auth/domain/structs/request/password_reset_request.go
@@ -1,0 +1,6 @@
+package structs_request
+
+type PasswordResetRequest struct {
+	Token    string `json:"token" binding:"required"`
+	Password string `json:"password" binding:"required,min=8"`
+}
