# src/core/auth/domain/structs/request/register_request.go
@@ -13,6 +13,9 @@ type RegisterRequest struct {
 	Department         *string `json:"department"`
 	Country            *string `json:"country"`
 	Workstation        *string `json:"workstation"`
+	PrimaryColor       *string `json:"primary_color"`
+	SecondaryColor     *string `json:"secondary_color"`
+	AvatarFileID       *uint   `json:"avatar_file_id"`
 	RegistrationSource string  `json:"registration_source" binding:"required,oneof=self gym trainer"`
 	SourceID           *uint   `json:"source_id"`
 }
